--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,15 @@
                <version>2.2</version>
            </dependency>
        </dependencies>
+    
+    
+    <dependencies>
+ <dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.12</version>
+ </dependency>
+</dependencies>
        <!-- end::joda[] -->
        
     <build>
